# rust-rest

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  handlers.rs  main.rs  models.rs
