[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
tokio = { version= "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.131", features = ["derive"]}
serde_json = "1.0.72"
serde_xml = "0.9.1"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
json = "0.12"

